feat(word-report): 3 enhancements
1. Symmetric page margins: left margin = current right margin (applyPageMargins)
2. Official footer: real Word footer part via createFooter(DEFAULT) so it repeats on every page within the margins (replaces the plain trailing body paragraph)
3. Overview table: reuse the table's first row (rowIdx 0 = getRow(0)) so no empty leading row remains